# smart_link

./: CMakeLists.txt  README.md
.github/workflows/: build_ci.yml
IoC.test/: CMakeLists.txt
docker.dir/: build.otus  docker-compose.yml  gateway.Dockerfile  monitor.service.Dockerfile  otus.Dockerfile  redirector.Dockerfile  start_monitor.sh  stop.sh
docker.dir/test/: norule.test.sh  search.test.sh  welcome.test.sh
httpgateway/: CMakeLists.txt  boostjsonobject.cpp  chainrequesthandler.h  checkconditioncommand.cpp  conditiontarget.cpp  conditiontarget.h  endpoint.cpp  endpoint.h  httpconnection.h  httpreadconnection.h  httpreadsocketconnection.h  httpredirectorresolver.cpp  httpredirectorresolver.h  httpredirectorresolverservice.cpp  httpredirectorresolverservice.h  httprequest.cpp  httprequest.h  httprequestjsonobject.cpp  httprequestjsonobject.h  httpresponse.h  httpsendconnection.h  icondition.h  ihttprequest.h  ihttpresponse.h  ireadableconnection.h  iredirector.h  irequesthandler.cpp  irequesthandler.h  irules.h  isendableconnection.h  main.cpp  monitorrequesthandlerdecorator.cpp  monitorrequesthandlerdecorator.h  processpacketcmd.cpp  processpacketcmd.h  requesthandlerbad.cpp  requesthandlerbad.h  requesthandlerhead.cpp  requesthandlerhead.h  requesthandlernotallowed.cpp  (+6 more)
httpredirector/: CMakeLists.txt  checkconditioncommand.cpp  checkconditioncommand.h  conditiontarget.h  endpoint.cpp  jsonreadconnection.h  jsonsendconnection.h  main.cpp  plugindllcondition.cpp  plugindllcondition.h  resolveredirectioncommand.cpp  resolveredirectioncommand.h  ruleshandler.cpp  ruleshandler.h  sendnewlocationcommand.cpp  sendnewlocationcommand.h
httpredirector.plugins/: CMakeLists.txt  date_before.cpp  target_contains.cpp
httpredirector.plugins/interface/: icondition.h
httpredirector/config/: redirection_rules.json
json/: boostjsonobject.h
monitor.service/: CMakeLists.txt  main.cpp
